django-sitemessage changelog
============================


v0.8.0
------
+ Implemented VKontakte messenger.
+ Implemented Facebook messenger.


v0.7.2
----------
* Template compilation errors are now considered dispatch errors and properly logged.


v0.7.1
------
* Django 1.9 compatibility improvements.


v0.7.0
------
+ Implemented Telegram messenger.
+ Added `allow_user_subscription` attr to base message and messenger classes.
+ Added schedule_tweet() shortcut.
+ Added schedule_telegram_message() shortcut.
+ Added Messenger.before_after_send_handling() context manager.
* Fixed `get_user_preferences_for_ui()` producing buggy result.


v0.6.0
------
+ Adapted for Django 1.8.
* Russian locale is updated.


v0.5.1
------
* Message.schedule() now respects message type priority attribute.
* `SITEMESSAGE_EMAIL_BACKEND_MESSAGES_PRIORITY` now defaults to None.


v0.5.0
------
* IMPORTANT: Package layout changed (messages, messengers locations changed).
* IMPORTANT: Changed default templates search path.
+ Implemented subscriptions handling.
+ Implemented Django email backend.
+ Implemented experimental `mark read` functionality for e-mails.
+ Implemented `List-Unsubscribe` e-mail header support for SMTP messenger.
+ Added Django 1.7+ migrations.
+ Added basic messages templates.
+ Added `INIT_BUILTIN_MESSAGE_TYPES` setting.
+ Added `EMAIL_BACKEND_MESSAGES_PRIORITY` setting.
+ Added `DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE` setting.
+ Added `SITE_URL` setting.
* Fixed delivery errors logging.
* Dispatch model is now always passed into `compile()`.
* Exception handling scope broadened for Twitter.


v0.4.1
------
* Fixed `sitemessage_send_scheduled` command failure on Django 1.7.
* Now `time_dispatched` field value is timezone-aware.


v0.4.0
------
+ Django 1.7 ready.
+ Added Russian loco.
+ Implemented get_message_type_for_app() and override_message_type_for_app().


v0.3.0
------
+ Added Twitter messenger.
* Messengers are moved into a separate module.


v0.2.0
------