@@ -2,6 +2,11 @@ django-sitemessage changelog
 ============================
 
 
+Unreleased
+----------
+* Django 1.10 compatibility improved.
+
+
 v0.8.0
 ------
 + Implemented VKontakte messenger.
